--- a/package.json
+++ b/package.json
@@ -29,11 +29,21 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-input-mask": "^2.0.4",
+    "react-maskedinput": "^4.0.1",
     "react-redux": "^8.0.5",
+    "react-text-mask": "^5.5.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/react-input-mask": "^3.0.2",
+    "@types/react-maskedinput": "^4.0.6",
+    "@types/react-text-mask": "^5.4.11",
+    "i": "^0.3.7",
+    "npm": "^9.8.1"
   }
 }
