--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-input-mask": "^2.0.4",
     "react-maskedinput": "^4.0.1",
     "react-redux": "^8.0.5",
+    "react-select": "^5.7.4",
     "react-text-mask": "^5.5.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
